--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1200px;
+  font-family: "Trispace", sans-serif;
 }
 
 code {
@@ -29,27 +30,36 @@ code {
 form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: left; */
   border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
+  background-color: rgba(0, 0, 0, 0.05);
   /* max-width: 350px;
   width: 70%; */
 }
 
 textarea {
   padding: 10px;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   min-height: 60px;
   width: 90%;
+  border: solid 2px rgba(0, 0, 0, 0.2);
 }
 
 .submit-button {
-  background-color: rgba(255, 0, 0, 0.4);
+  background-color: #ffadad;
   border-radius: 20px;
   border: none;
   padding: 10px;
+  width: 200px;
+  transition: all 0.2s ease-in-out;
+}
+
+.submit-button:hover {
+  transform: scale(1.1);
 }
 
 .new-container {
@@ -74,5 +84,29 @@ textarea {
 .like-button {
   border: none;
   border-radius: 50%;
-  background-color: rbga(0, 0, 0, 0.26);
+  width: 40px;
+  height: 40px;
+  transition: all 0.2s ease-in-out;
+  /* background-color: rbga(0, 0, 0, 0.26); */
+}
+
+.like-button:hover {
+  transform: scale(1.1);
+}
+
+.button-card {
+  display: flex;
+  flex-direction: row;
+}
+
+.likes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.likes-amount {
+  font-size: 12px;
+  margin-left: 5px;
 }
