--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,7 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1200px;
   font-family: "Trispace", sans-serif;
 }
 
@@ -30,14 +29,11 @@ code {
 form {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: left; */
   border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
   background-color: rgba(0, 0, 0, 0.05);
-  /* max-width: 350px;
-  width: 70%; */
+  font-size: 14px;
 }
 
 textarea {
@@ -70,12 +66,10 @@ textarea {
   grid-gap: 20px;
   margin-top: 20px;
   width: 90%;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 .new-thoughts-card {
-  /* display: flex;
-  flex-direction: column; */
   border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
@@ -87,7 +81,6 @@ textarea {
   width: 40px;
   height: 40px;
   transition: all 0.2s ease-in-out;
-  /* background-color: rbga(0, 0, 0, 0.26); */
 }
 
 .like-button:hover {
@@ -109,4 +102,10 @@ textarea {
 .likes-amount {
   font-size: 12px;
   margin-left: 5px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.date {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.3);
 }
