--- a/code/src/index.css
+++ b/code/src/index.css
@@ -34,6 +34,7 @@ form {
   box-shadow: 5px 5px;
   background-color: rgba(0, 0, 0, 0.05);
   font-size: 14px;
+  margin-bottom: 20px;
 }
 
 textarea {
@@ -63,7 +64,7 @@ textarea {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  grid-gap: 20px;
+  grid-gap: 30px;
   margin-top: 20px;
   width: 90%;
   max-width: 500px;
