--- a/code/src/index.css
+++ b/code/src/index.css
@@ -51,7 +51,7 @@ main {
   word-break: break-word;
   align-items: center;
   break-inside: auto;
-  width: 400px;
+  width: 300px;
   margin: 20px;
 }
 
@@ -149,5 +149,11 @@ main {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 768px) {
+  .thoughts-container {
+    width: 450px;
   }
 }
