--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,6 +4,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-image: url("./rose.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -24,9 +26,10 @@ h1 {
   padding: 5%;
 }
 
-input {
-  padding: 40px;
-  margin: 10px 0;
+textarea {
+  height: 80px;
+  width: 250px;
+  margin: 12px 0;
 }
 
 .form-button {
@@ -52,15 +55,13 @@ input {
 
 .like-button {
   border-radius: 50%;
-  padding: 0 15px;
+  padding: 10px 20px;
   background-color: #f2f0f0;
   border: none;
   margin-right: 5px;
 }
 
-.like-button:hover,
-.like-button:active,
-.like-button:visited {
+.like-button:hover {
   background-color: #ffadad;
 }
 
@@ -107,10 +108,9 @@ input {
   }
 
   .content-wrapper {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 0 15%;
+    margin: 0 10%;
   }
 
   h1 {
@@ -118,7 +118,6 @@ input {
   }
 
   .form-wrapper {
-    width: 80%;
     padding: 5% 3%;
     box-shadow: 9px 9px;
   }
@@ -128,9 +127,10 @@ input {
     font-size: 16px;
   }
 
-  input {
-    padding: 8% 32%;
-    margin: 20px 15px;
+  textarea {
+    height: 100px;
+    width: 400px;
+    margin: 20px 0;
   }
 
   .letter-counter {
@@ -143,7 +143,6 @@ input {
   }
 
   .thought-wrapper {
-    width: 80%;
     padding: 5% 3%;
     box-shadow: 8px 8px;
   }
@@ -160,7 +159,7 @@ input {
     justify-content: center;
   }
   .content-wrapper {
-    margin: 0;
+    margin: 5% 20%;
   }
 
   h1 {
@@ -177,13 +176,14 @@ input {
     font-size: 18px;
   }
 
-  input {
-    padding: 8% 32%;
-    margin: 25px 10px;
+  textarea {
+    width: 500px;
+    height: 100px;
+    margin: 25px 0;
   }
 
   .form-button {
-    padding: 12px;
+    padding: 20px;
   }
 
   .thought-wrapper {
