--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,6 +7,7 @@
 body {
 	font-family: 'Oxygen Mono', monospace;
 	
+	
   /* font-family: Consolas-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -50,7 +51,7 @@ button {
 .loading-spinner {
 	width: 50px;
 	height: 50px;
-	border: 5px solid #f658c2;
+	border: 4px solid #ffadad;
 	border-radius: 50%;
 	border-left: 5px solid #fff;
 	animation: spinner infinite 0.3s;
@@ -69,3 +70,9 @@ button {
 }
 
 
+
+/* Responsiveness SMALL SCREEN */
+@media (min-width: 992px) {
+
+
+}
