--- a/code/src/Components/newThoughtInput.css
+++ b/code/src/Components/newThoughtInput.css
@@ -10,23 +10,32 @@
   max-width: 450px;
 }
 
-textarea {
+.new-thought-input__text-area {
   resize: none;
   width: 100%;
   margin: 5px 0;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 ::placeholder {
   font-size: 12px;
 }
 
+.new-thought-input__button-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .new-thought-input__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #000;
   background-color: #ffadad;
   font-weight: 700;
   font-size: 14px;
-  padding: 10px;
+  height: 40px;
   border-radius: 20px;
 }
 
