--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-image: url("https://images.unsplash.com/photo-1558779967-a95d813caee3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=871&q=80");
+ background-image: url("https://cdn.pixabay.com/photo/2017/02/16/19/47/bokeh-2072271_1280.jpg");
   background-size: cover; 
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -150,6 +150,7 @@ label {
 
 .date {
   color: rgb(182, 182, 182);
+  padding-right: 15px;
 }
 
 .loading-overlay {
