--- a/code/src/components/HappyHeader.css
+++ b/code/src/components/HappyHeader.css
@@ -1,8 +1,10 @@
 
 
 .header h1 {
-    font-size: 30px;
+    color: #fff;
+    font-size: 35px;
     background-color: #ffadad;
+    text-shadow: 2px 2px #950601;
 }
 
 .header {
@@ -20,10 +22,6 @@
 
 .header h1 {
     font-size: 40px;
-}
-
-.header {
-    padding: 30px;
 }
 }
     
