--- a/code/src/components/HappyHeart.css
+++ b/code/src/components/HappyHeart.css
@@ -1,5 +1,3 @@
-
-
 .inputContainer {
     display: flex;
     flex-direction: column;
@@ -41,4 +39,36 @@
     color: gray;
     font-size: x-small;
 
+}
+
+
+/* Responsiveness SMALL SCREEN */
+@media (min-width: 992px) {
+
+
+    .inputContainer {
+        font-size: 24px;
+        max-width: 700px;
+        padding: 30px 50px 30px 30px;
+        margin: 30px 0;
+        box-shadow: 10px 10px 0 #000;
+    }
+    
+    .heart_buttonWrapper {
+        padding-top: 3%;
+        padding-bottom: 0;
+    }
+    
+    .heartButton_Counter p {
+        font-size: 20px;
+    }
+    
+    .heartButton {
+        width: 45px;
+        height: 45px;
+    }
+    
+    .heartDate {
+        font-size: 16px;
+    }
 }
