--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,12 +5,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 code {
   font-family: "Roboto Mono", monospace;
 }
 
+p {
+  font-size: 12px;
+}
+
+.thought-p {
+  font-weight: 600;
+  color: #333;
+}
+
 .form-title {
-  font-size: 10px;
+  font-size: 11px;
+  font-weight: 600;
+  font-family: "Roboto Mono";
+  color: #333;
 }
 
 .h3 {
@@ -28,23 +44,42 @@ code {
   font-weight: 700;
   color: rgb(63, 62, 62);
   background-color: rgb(255, 173, 173);
+  font-family: "Roboto Mono";
   text-align: center;
   font-size: 10px;
-  /* font-family: "Roboto Mono"; */
 }
 /* red hearts in send thought btn*/
 .send-heart {
   color: rgb(255, 64, 50);
-
   margin-right: 5px;
   margin-left: 5px;
 }
 
+legend {
+  color: #333;
+  padding: 5px;
+  position: relative;
+  font-weight: 600;
+  color: rgb(255, 173, 173);
+  font-family: "Roboto Mono";
+  weight: 600;
+}
+
+fieldset {
+  padding: 10px 25px 20px 20px;
+}
+
+fieldset > legend {
+  margin: -5px;
+}
+
 .textarea {
   width: 95%;
-  height: 40px;
-  /* border-color: rgb(207, 207, 207); */
+  height: 37px;
   border: 1px solid rgb(207, 207, 207);
+
+  /* white-space: pre-wrap; */
+  /* word-wrap: break-word; */
 }
 
 button {
@@ -55,11 +90,12 @@ button {
 
 .btn {
   display: inline-block;
-  border-radius: 100%;
+  border-radius: 50%;
   color: rgb(255, 64, 50);
   background-color: rgb(255, 173, 173);
-  width: 10%;
-  height: 27px;
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
 }
 
 .app {
@@ -71,110 +107,40 @@ button {
   align-items: left;
   flex-direction: column;
   width: 300px;
-  height: 165px;
   background-color: rgb(242, 240, 240);
   border: 1px solid rgb(2, 2, 2);
   box-shadow: 7px 7px rgb(2, 2, 2);
   border-radius: 2px;
   margin-bottom: 1.5rem;
+  padding: 10px;
 }
 
-.form-container {
-  padding: 5px;
-}
-.thoughts {
+.thoughts-card {
   display: flex;
   flex-direction: column;
   align-items: left;
   width: 300px;
-  height: 180px;
   border: 1px solid #333;
   margin-bottom: 1rem;
-  height: 140px;
+
   border: 1px solid rgb(63, 62, 62);
   box-shadow: 7px 7px rgb(63, 62, 62);
-}
-
-.thoughts-card {
   padding: 10px;
 }
 
 .thoughts-container {
-  padding: 5px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .btn-heart {
   color: red;
 }
 
-/* .loading-heart {
-  width: 150px;
-  height: 150px;
+.heart-likes {
   display: flex;
-  justify-content: center;
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-  animation: heartbeat 1s infinite;
-} */
-
-/* #loading-heart:before,
-#loading-heart:after {
-  position: absolute;
-  content: "";
-  left: 50px;
-  top: 0;
-  width: 50px;
-  height: 80px;
-  background: #fff;
-  -moz-border-radius: 50px 50px 0 0;
-  border-radius: 50px 50px 0 0;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-transform-origin: 0 100%;
-  -moz-transform-origin: 0 100%;
-  -ms-transform-origin: 0 100%;
-  -o-transform-origin: 0 100%;
-  transform-origin: 0 100%;
-} */
-/* #loading-heart:after {
-  left: 0;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  -webkit-transform-origin: 100% 100%;
-  -moz-transform-origin: 100% 100%;
-  -ms-transform-origin: 100% 100%;
-  -o-transform-origin: 100% 100%;
-  transform-origin: 100% 100%;
-} */
-/* 
-@keyframes loading-heart {
-  0% {
-    transform: scale(0.75);
-  }
-  20% {
-    transform: scale(1);
-  }
-  40% {
-    transform: scale(0.75);
-  }
-  60% {
-    transform: scale(1);
-  }
-  80% {
-    transform: scale(0.75);
-  }
-  100% {
-    transform: scale(0.75);
-  }
-} */
+}
 
 .loading-overlay {
   position: absolute;
