--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,41 @@
+* {
+	margin: 0px;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+.title {
+	display: flex;
+	justify-content: center;
+}
+
+.header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	padding-top: 32px;
+}
+
+.header h1 {
+	font-family: 'Bungee Shade', cursive;
+	text-transform: uppercase;
+	color: black;
+	text-shadow: 2px white;
+
+	font-size: 30px;
+	letter-spacing: 3px;
+}
+
 body {
-	margin: 10px;
+	/* background-color: #ffadad; */
+	background-image: url(./images/background.jpg);
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-weight: 400;
+	font-size: 12px;
 	font-family: 'Trispace', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 }
 
 .img {
@@ -15,14 +48,14 @@ body {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	row-gap: 30px;
+	row-gap: 25px;
 	border: solid black 1px;
 	padding: 15px;
 	margin: 25px auto;
 	box-shadow: 5px 5px;
 	background-color: #f2f0f0;
 	max-width: 400px;
-	height: 200px;
+	height: 250px;
 }
 
 .thought-btn {
@@ -32,11 +65,17 @@ body {
 	color: black;
 	border: none;
 	font-weight: bold;
+	transition: all 0.2s ease-in-out;
+	cursor: ;
 }
 
+.thought-btn:hover {
+	transform: scale(1.1);
+}
 .form-title {
 	font-weight: bold;
 	font-family: 'Trispace', sans-serif;
+	font-size: 14px;
 }
 
 .form-bottom-wrapper {
@@ -46,9 +85,25 @@ body {
 	width: 100%;
 }
 
+.text-area {
+	display: block;
+	resize: none;
+	font-size: 12px;
+	font-weight: 400;
+	padding: 10px;
+	border-color: #e0dfdf;
+	width: 98%;
+}
+
+.text-counter {
+	display: flex;
+	align-items: center;
+	color: #949494;
+}
 /*-----------------ThoughtItem------------- */
 
 .thought-container {
+	background-color: #fff;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -83,6 +138,11 @@ body {
 	background: #ffadad;
 	border: none;
 	margin-right: 5px;
+	transition: all 0.2s ease-in-out;
+}
+
+.heart-btn:hover {
+	transform: scale(1.1);
 }
 
 .date {
@@ -126,15 +186,20 @@ body {
 	}
 }
 
+/*-----------------footer------------- */
+.footer {
+	color: #fff;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 25px;
+	font-size: 15px;
+}
+
 /*Media Queries*/
 /*Mobile*/
 @media (min-width: 666px) {
 	.question-form,
 	.thought-container {
-		width: 60%;
 		max-width: 400px;
-	}
-
-	textarea {
 	}
 }
