--- a/code/src/components/newthought.css
+++ b/code/src/components/newthought.css
@@ -1,29 +1,72 @@
 .new-thought {
-  order: 5px solid #00668d;
-  margin: 10px;
+  width: 350px;
+  height: 280px;
+  margin: 25px 10px;
   border: #ccc solid 1px;
-  box-shadow: 5px 5px 1px #333;
+  box-shadow: 10px 10px 1px #333;
   background: #f2f0f0;
-  padding: 15px;
-  box-sizing: border-box;
+  padding: 5px 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: 'Trispace', sans-serif;
+  color: #333;
+}
+.new-thought > p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.new-message {
+  border: rgb(123, 124, 124) 1px solid;
+  height: 5rem;
+  font-family: 'Trispace', sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.new-message:focus {
+  outline: none;
+  border: 1px solid #ffadad;
+}
+.submit-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+.submit-button {
+  background-color: #ffadad;
+  border-color: transparent;
+  border-radius: 50px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: 80%;
+  font-weight: bold;
+  color: #333;
+  font-size: 1rem;
+  padding: 0;
+  cursor: pointer;
 }
 
-.new-message{
-    border:rgb(123, 124, 124) 1px solid;
-    height:4rem
+.submit-button:hover {
+  border: 1px solid #f93f31;
 }
 
-.submit-button{
+.submit-button span {
+  margin: 0 10px;
+}
 
-    border-radius: 22%;
-    width: 186px;
-    height: 42px;
-    margin-top: 1.5rem;
-    border: none;
-    background-color: rgb(223, 156, 176);
-    color: #333;
-    cursor: pointer;
+.counter-container {
+  display: flex;
+  justify-content: center;
+  margin-right: 5px;
+}
+
+@media (min-width: 768px) {
+  .new-thought {
+    width: 450px;
+  }
+
+  .submit-button {
+    width: 60%;
+  }
 }
