--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,29 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Trispace', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.wrapper {
-  width: 70%;
-  max-width: 450px;
-  margin: 0 auto;
-  padding-top: 100px;
-  }
-
-@media only screen and (min-width: 768px) {
-  .wrapper {
-    max-width: 450px;
-    margin: 0 auto;
-    padding-top: 100px;
-    height: 812px;
-  }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
