--- a/code/src/components/thought.css
+++ b/code/src/components/thought.css
@@ -1,5 +1,5 @@
 .thought {
-  width:350px;
+  width:325px;
   margin: 25px 10px;
   border: #ccc solid 1px;
   box-shadow: 10px 10px 1px #333;
@@ -9,12 +9,13 @@
   flex-direction: column;
   justify-content: center;
   font-family: 'Trispace', sans-serif;
+  word-wrap: break-word;
 }
 .heart{
   background-color: #d0d0d0;
   border-radius: 50%;
   border: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   width:40px;
   height:40px;
   padding:0;
@@ -32,7 +33,7 @@
 .heart span{
  padding-right: 5px;
  margin: 0;
- font-size: 1rem;
+ font-size: 0.8rem;
 text-align: center;
 }
 
@@ -54,7 +55,11 @@ text-align: center;
 
 @media (min-width: 768px) {
   .thought {
-    width:450px;
+    width:550px;
   }
+
+  .heart span{
+
+ font-size: 1rem;}
 
 }
