--- a/code/src/index.css
+++ b/code/src/index.css
@@ -57,9 +57,10 @@ h1 {
   font-family: 'Roboto Mono', monospace;
   font-size: 60px;
   font-weight: 700;
-  text-shadow: 3px 3px 3px gray;
+  text-shadow: 3px 3px 3px #FDAEAD;
   text-align: center;
-  margin: 30px
+  margin: 30px;
+  color:white;
 }
 /*Containers*/
 
