--- a/code/src/components/HappyForm.css
+++ b/code/src/components/HappyForm.css
@@ -2,6 +2,7 @@
     font-family: 'Roboto', sans-serif;
     background-color: #efefef;
     padding: 15px;
+    margin: 0 0 20px;
     width: 100%;
     min-width: 260px;
     max-width: 450px;
