--- a/code/src/components/HappyHeader.css
+++ b/code/src/components/HappyHeader.css
@@ -1,9 +1,8 @@
 
 
 .header h1 {
-    color: #fff;
+    color: #ffadad;
     font-size: 35px;
-    background-color: #ffadad;
     text-shadow: 2px 2px #950601;
     padding: 10px;
 }
@@ -22,7 +21,7 @@
 @media (min-width: 768px) {
 
 .header h1 {
-    font-size: 40px;
+    font-size: 50px;
 }
 }
     
