--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,55 +13,94 @@ code {
 }
 
 form {
-  border: 2px solid black;
+  background-color: rgb(233, 231, 231);
+  border: 1px solid black;
   padding: 1em;
   width: 350px;
   margin: 1em auto;
   display: flex;
   flex-direction: column;
   justify-content: left;
+  box-shadow: 6px 6px 1px 1px rgb(5 5 5 / 90%);
 }
 
 textarea {
   border: 0;
-  padding: 1em;
-  margin: 1em;
+  padding-top: 1em;
+  padding-left: 1em;
+  margin: 0;
+  resize: none;
+  min-width: 90%;
+  max-width: 90%;
+  min-height: 1em;
+}
+
+.submit-button {
+  background-color: lightpink;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 button {
   padding: 0.5em;
-  border: dotted;
+  border-radius: 10px;
 }
 
 label {
+  padding-left: 0.5em;
   font-size: 20px;
   font-weight: 700;
 }
 
+.date {
+  font-style: italic;
+}
+
+p {
+  font-size: 12px;
+}
+
+.thought-text {
+  overflow-wrap: break-word;
+}
+
+.hearts {
+  color: red;
+  font-size: 25px;
+}
+
+.icon {
+  border-radius: 50%;
+}
+
 .main-container {
-  border: 2px solid black;
+  border: 1px solid black;
   width: 350px;
   display: grid;
   place-items: center;
   padding: 0.5em;
   margin: 2em auto;
-
-  /* -webkit-animation-name: falling; */
   animation: falling 2s;
-  /* -webkit-animation-duration: 3s;
-  animation-duration: 3s; */
-  -webkit-animation-timing-function: ease-out;
   animation-timing-function: ease-out;
+  box-shadow: 6px 6px 1px 1px rgb(5 5 5 / 90%);
 }
 
 .message-wrapper {
   display: grid;
   place-items: center;
+  height: auto;
+  width: 350px;
   padding: 0.5em;
-
   animation: spin 2s;
-  -webkit-animation-timing-function: ease-out;
   animation-timing-function: ease-out;
+  overflow-wrap: break-word;
+}
+
+.likes-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 330px;
 }
 
 @keyframes spin {
@@ -92,14 +131,4 @@ label {
     opacity: 1;
     transform: translateY(0);
   }
-}
-
-.date {
-  font-style: italic;
-}
-
-textarea {
-  min-width: 90%;
-  max-width: 90%;
-  min-height: 1em;
 }
