--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,6 +3,8 @@ body {
   font-family: "Roboto Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f1;
+  background-image: linear-gradient(#f5f5f1 0%, #e50914 54%);
 }
 
 code {
@@ -27,8 +29,31 @@ textarea {
 }
 
 h1 {
+  text-align: center;
+  color: pink;
+  text-shadow: 2px 2px red, 3px 3px red, 4px 4px red;
+
+  padding-bottom: 10px;
+  animation: header 2.5s ease-in-out 3;
+}
+
+@keyframes header {
+  0% {
+    letter-spacing: normal;
+  }
+
+  50% {
+    letter-spacing: 5px;
+  }
+
+  100% {
+    letter-spacing: normal;
+  }
+}
+
+h2 {
   margin-top: 0;
-  margin-left: 30px;
+  margin-left: 20px;
   font-size: 18px;
 }
 
@@ -57,6 +82,9 @@ form {
   margin: 20px auto;
   box-shadow: 6px 6px black;
   overflow-wrap: break-word;
+  white-space: pre-wrap;
+  background: white;
+  border-radius: 2px;
 }
 
 .thoughts-card p {
@@ -89,6 +117,13 @@ button {
   border-radius: 50%;
   margin-left: 10px;
   margin-bottom: 10px;
+  text-align: left;
+  padding: 0;
+}
+
+.heart-button > span {
+  height: 100%;
+  width: 100%;
 }
 
 .heart-button:hover {
@@ -111,4 +146,23 @@ button {
   margin-right: 10px;
   float: right;
   color: gray;
+}
+
+footer {
+  color: white;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  form,
+  .thoughts-card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1023px) {
+  form,
+  .thoughts-card {
+    width: 70%;
+  }
 }
