--- a/code/src/Components/header.css
+++ b/code/src/Components/header.css
@@ -1,11 +1,40 @@
 header {
-  width: 100%;
-  padding: 0 10%;
+  /* width: 90%; */
+  display: flex;
+  justify-content: center;
+  padding: 0 20%;
 }
 
 header h1 {
-  font-size: 4em;
+  font-size: 3.2em;
   color: #ffff;
   margin-bottom: 5%;
   text-shadow: 5px 5px black;
+}
+
+/* STYLING FOR LARGER PHONES AND TABLET */
+@media (min-width: 481px) {
+  header {
+    padding: 0 10%;
+  }
+
+  header h1 {
+    font-size: 4em;
+  }
+}
+
+/* STYLING FOR DESKTOP */
+@media (min-width: 1024px) {
+  header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header h1 {
+    font-size: 6em;
+    color: #ffff;
+    margin-bottom: 5%;
+    text-shadow: 10px 10px black;
+  }
 }
