--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css2family=Oxygen+Mono&display=swap');
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-* {
-  box-sizing: border-box;
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -13,7 +19,19 @@ button {
   border: none;
 }
 
+p {
+  font-size: 16px;
+}
+
 .app__wrapper {
   display: grid;
   justify-content: center;
+  justify-items: center;
+}
+
+/* STYLING FOR DESKTOP */
+@media (min-width: 1024px) {
+  p {
+    font-size: 18px;
+  }
 }
