--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,6 +4,22 @@
 	box-sizing: border-box;
 }
 
+body {
+	/* background-color: #ffadad; */
+	background-image: url(./images/background.jpg);
+	background-position: bottom;
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-weight: 400;
+	font-size: 12px;
+	font-family: 'Trispace', sans-serif;
+}
+
+.img {
+	padding: 5px;
+}
+
+/*-----------------Header------------- */
 .title {
 	display: flex;
 	justify-content: center;
@@ -22,24 +38,24 @@
 	text-transform: uppercase;
 	color: black;
 	text-shadow: 2px white;
-
 	font-size: 30px;
 	letter-spacing: 3px;
+	animation: color 15s infinite;
 }
 
-body {
-	/* background-color: #ffadad; */
-	background-image: url(./images/background.jpg);
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	font-weight: 400;
-	font-size: 12px;
-	font-family: 'Trispace', sans-serif;
-}
-
-.img {
-	padding: 5px;
+@keyframes color {
+	from {
+		color: #120078;
+	}
+	20% {
+		color: #9d0191;
+	}
+	40% {
+		color: #fd3a69;
+	}
+	60% {
+		color: #fecd1a;
+	}
 }
 
 /*-----------------Question Form------------- */
@@ -66,7 +82,6 @@ body {
 	border: none;
 	font-weight: bold;
 	transition: all 0.2s ease-in-out;
-	cursor: ;
 }
 
 .thought-btn:hover {
@@ -167,7 +182,7 @@ body {
 .loading-spinner {
 	width: 50px;
 	height: 50px;
-	border: 5px solid red;
+	border: 5px solid #ffadad;
 	border-radius: 50%;
 	border-left: 5px solid #fff;
 	animation: spinner infinite 0.5s;
@@ -190,12 +205,23 @@ body {
 .footer {
 	color: #fff;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	padding-bottom: 25px;
 	font-size: 15px;
+	text-decoration: none;
 }
 
-/*Media Queries*/
+.footer a {
+	text-decoration: none;
+}
+
+.footer-info {
+	text-decoration: none;
+	color: white;
+}
+/*-----------------Media Queries------------- */
 /*Mobile*/
 @media (min-width: 666px) {
 	.question-form,
