--- a/code/src/Components/header.css
+++ b/code/src/Components/header.css
@@ -27,8 +27,7 @@ header h1 {
 @media (min-width: 1024px) {
   header {
     width: 100%;
-    display: flex;
-    justify-content: center;
+    padding: 0;
   }
 
   header h1 {
