--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,6 +31,12 @@ code {
   overflow-wrap: break-word;
 }
 
+.label{
+  text-transform: uppercase;
+  margin:auto;
+  padding: 10px;
+}
+
 .thought-wrapper {
   display: flex;
   flex-direction: column;
@@ -60,22 +66,25 @@ code {
 
 .send-thought-button{
   background-color: rgb(253, 112, 112);
-  width: 60%;
-  height: 50px;
-  border-radius: 450%;
+  width: 70%;
+  height: 60px;
+  border-radius: 45%;
   margin: auto;
+  padding: 5px;
 }
 
   
 .like-button{
   width: 40px;
   height: 40px;
-  background-color: rgb(248, 167, 167);
+  background-color: rgb(248, 236, 236);
+  border-radius: 50%;
 }
 
 .date {
   font-style: italic;
   font-size: 10px;
+  align-self: end;
 }
 
 
