--- a/code/src/index.css
+++ b/code/src/index.css
@@ -80,11 +80,16 @@ footer {
 	width: fit-content;
 	padding: 5px 10px;
 	display: flex;
+	align-items: center;
 	border-radius: 20px;
 	margin: 10px;
 	border-style: none;
 	font-family: monospace;
 	background-color: rgba(243, 140, 197, 0.5);
+}
+
+.heart-span {
+	padding: 5px;
 }
 
 /* styling fot messageItem */
