--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,11 @@
 body {
   margin: 40px 10px;
-  background: rgb(251, 63, 63);
+  /* background: rgb(251, 63, 63);
   background: radial-gradient(
     circle,
     rgba(251, 63, 63, 1) 0%,
     rgba(228, 180, 228, 1) 100%
-  );
-  /* background-image: url("./hearts-bgr.jpg");
-  background-position: center; */
+  ); */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,6 +16,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+header {
+  height: 100px;
+  text-align: center;
+  color: rgb(244, 111, 133);
+  font-family: "lobster", sans-serif;
 }
 
 p {
@@ -65,25 +70,10 @@ p {
   padding: 2%;
   width: 40px;
   margin: 10px 6px 0px 0px;
-  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
-  animation: btn-pulse 2s infinite;
 }
 
-@keyframes btn-pulse {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
-  }
+.like-heart {
+  margin-right: -5px;
 }
 
 .like-btn:hover {
@@ -154,13 +144,14 @@ textarea {
 }
 
 .refresh-btn {
-  background-color: #fff;
+  background-color: #f737378e;
+  font-family: "Trispace", sans-serif;
   border: none;
-  width: 200px;
-  color: rgb(240, 125, 144);
-  padding: 15px 30px;
+  /* border-radius: 10px; */
+  color: rgb(255, 255, 255);
+  padding: 15px 20px;
   margin-bottom: 30px;
-  box-shadow: 3px 3px rgb(0, 0, 0);
+  box-shadow: 3px 3px #000;
 }
 
 /* ---- MEDIA QUERY FOR DESKTOP AND TABLET ----- */
