--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Trispace", sans-serif;
+  background-color: #ffadad;
 }
 
 code {
@@ -32,9 +33,13 @@ form {
   border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #f5f5f5;
   font-size: 14px;
   margin-bottom: 20px;
+}
+
+label {
+  font-weight: bold;
 }
 
 textarea {
@@ -53,6 +58,7 @@ textarea {
   padding: 10px;
   width: 200px;
   transition: all 0.2s ease-in-out;
+  font-weight: bold;
 }
 
 .submit-button:hover {
@@ -74,6 +80,7 @@ textarea {
   border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
+  background-color: white;
 }
 
 .like-button {
