--- a/code/src/index.css
+++ b/code/src/index.css
@@ -84,6 +84,9 @@ textarea {
 }
 
 .like-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   border-radius: 50%;
   width: 40px;
