--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #faebeb;
   margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,6 +14,15 @@ code {
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Trispace&display=swap");
+
+.header {
+  text-align: center;
+  display: block;
+  margin: 30px auto 40px;
+  font-size: 22px;
+  font-family: "Trispace", sans-serif;
+  font-weight: 500;
+}
 
 p {
   margin: 10px auto;
@@ -39,6 +48,7 @@ p {
 }
 
 .thoughtWrapper {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -87,7 +97,7 @@ p {
   align-items: center;
   width: 320px;
   height: fit-content;
-  margin: 20px auto;
+  margin: 20px auto 30px;
   border: 1px solid #000;
   box-shadow: 5px 5px black;
 }
