--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,17 +1,241 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+form {
+  background-color: rgb(233, 231, 231);
+  border: 1px solid black;
+  padding: 1em;
+  width: 324px;
+  margin: 1em auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  box-shadow: 6px 6px 1px 1px rgb(5 5 5 / 90%);
+}
+
+textarea {
+  border: 0;
+  padding-top: 1em;
+  padding-left: 1em;
+  margin: 0;
+  resize: none;
+  min-width: 90%;
+  max-width: 90%;
+  min-height: 1em;
+  font-size: 15px;
+}
+
+.submit-button {
+  background-color: lightpink;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 20px;
+  margin: 20px 0 0 7px;
+  width: 193px;
+  padding: 3px 0;
+}
+
+label {
+  padding-left: 0.5em;
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .date {
-  
+  font-style: italic;
+  grid-area: date;
+  text-align: right;
+}
+
+p {
+  font-size: 12px;
+  padding-left: 10px;
+}
+
+.thought-text {
+  overflow-wrap: break-word;
+  padding: 10px 5px;
+  font-size: 18px;
+}
+
+.hearts {
+  color: red;
+  font-size: 27px;
+}
+
+.icon {
+  border-radius: 50%;
+  grid-area: icon;
+  width: 35px;
+  height: 35px;
+  background-color: pink;
+  border-color: transparent;
+}
+
+.icon:focus > span.hearts {
+  animation: pulse 1.5s infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    font-size: 30px;
+  }
+  50% {
+    font-size: 27px;
+  }
+  100% {
+    font-size: 30px;
+  }
+}
+
+main {
+  width: 350px;
+  display: grid;
+  place-items: center;
+  padding: 0.5em;
+  margin: 2em auto;
+}
+
+.message-wrapper {
+  display: grid;
+  height: auto;
+  width: 335px;
+  padding: 0.5em;
+  animation: spin 2s;
+  animation-timing-function: ease-out;
+  overflow-wrap: break-word;
+  border: 1px solid black;
+  box-shadow: 6px 6px 1px 1px rgb(5 5 5 / 90%);
+  margin: 12px 0;
+  animation: falling 2s;
+  animation-timing-function: ease-in;
+}
+
+@keyframes falling {
+  0% {
+    opacity: 0.1;
+    transform: translateY(-10em);
+  }
+  25% {
+    opacity: 0.2;
+    transform: translateY(-5em);
+  }
+
+  50% {
+    opacity: 0.3;
+    transform: translateY(-6em);
+  }
+  70% {
+    opacity: 0.4;
+    transform: translateY(-5em);
+  }
+  80% {
+    opacity: 0.5;
+    transform: translateY(-3em);
+  }
+  95% {
+    opacity: 0.7;
+    transform: translateY(-5em);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes falling {
+  0% {
+    opacity: 0.1;
+    transform: translateY(-10em);
+  }
+  25% {
+    opacity: 0.2;
+    transform: translateY(-5em);
+  }
+
+  50% {
+    opacity: 0.3;
+    transform: translateY(-6em);
+  }
+  70% {
+    opacity: 0.4;
+    transform: translateY(-5em);
+  }
+  80% {
+    opacity: 0.5;
+    transform: translateY(-3em);
+  }
+  95% {
+    opacity: 0.7;
+    transform: translateY(-5em);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-moz-keyframes falling {
+  0% {
+    opacity: 0.1;
+    transform: translateY(-10em);
+  }
+  25% {
+    opacity: 0.2;
+    transform: translateY(-5em);
+  }
+
+  50% {
+    opacity: 0.3;
+    transform: translateY(-6em);
+  }
+  70% {
+    opacity: 0.4;
+    transform: translateY(-5em);
+  }
+  80% {
+    opacity: 0.5;
+    transform: translateY(-3em);
+  }
+  95% {
+    opacity: 0.7;
+    transform: translateY(-5em);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.likes-container {
+  align-items: center;
+  width: 336px;
+  display: grid;
+  grid-template-columns: 40px 40px auto;
+  grid-template-rows: 40px;
+  grid-template-areas: 'icon likes date';
+}
+
+.num-likes {
+  grid-area: likes;
+  color: gray;
+  font-size: 14px;
 }
