--- a/code/src/index.css
+++ b/code/src/index.css
@@ -57,7 +57,7 @@ h1 {
   font-family: 'Roboto Mono', monospace;
   font-size: 60px;
   font-weight: 700;
-  text-shadow: 3px 3px 3px #FDAEAD;
+  text-shadow: 3px 3px 3px black;
   text-align: center;
   margin: 30px;
   color:white;
