readme and og tags added

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,6 +3,17 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #ef3b36; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #ef3b36
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #ef3b36
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 * {
@@ -124,6 +135,7 @@ main {
   margin: 12px 0;
   animation: falling 2s;
   animation-timing-function: ease-in;
+  background-color: white;
 }
 
 @keyframes falling {
