--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -43,10 +43,15 @@
 
 .x-likes {
   font-size: 14px;
-  color: #A9A9A9;
+  color: #979696;
   padding-left: 5px;
 }
 
+.likes{
+  padding-left: 2px;
+}
+
 .date {
-  color: #D2D2D2;
+  color: #b8b5b5;
+  font-size: 14px;
 }
